site phone number anchor no longer stretches to the logo

--- a/src/sass/import/header.scss
+++ b/src/sass/import/header.scss
@@ -2,7 +2,7 @@
 
 .site-header {
 	padding: 1rem 2%;
-	box-shadow: 0 0 2.2rem rgb(38, 38, 38);
+	box-shadow: 0 0 2.2rem $dark;
 	background-color: $white;
 	@at-root #{$trans-header} & {
 		background-color: transparent;
@@ -50,7 +50,7 @@ body {
 input[type='search'] {
 	&#main-search {
 		background-color: transparent;
-		border: 0 solid rgb(38, 38, 38);
+		border: 0 solid $dark;
 		color: rgb(172, 150, 110);
 		@at-root #{$trans-header} & {
 			border-color: $white;
@@ -105,10 +105,12 @@ input[type='search'] {
 
 /*   Header Info Widget   */
 .header-info {
+	text-align: right;
 	.textwidget {
-		display: flex;
-		flex-direction: column;
-		text-align: right;
+		display: inline-block;
+		> *{
+			display: block;
+		}
 		> :first-child {
 			color: rgb(52, 80, 115);
 			@at-root #{$trans-header} & {
@@ -120,7 +122,7 @@ input[type='search'] {
 		> :last-child {
 			font-size: 2.8rem;
 			font-weight: 700;
-			display: block;
+			display: inline-block;
 			letter-spacing: 0.1em;
 			color: rgb(172, 150, 110);
 			@at-root #{$trans-header} & {
